y.output
State 2 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: assignment
    5          | expression ':'

    6 assignment: ID '=' expression

    7 expression: NUMBER
    8           | ID
    9           | expression '+' expression
   10           | expression '-' expression
   11           | expression '*' expression
   12           | expression '/' expression
   13           | expression '=' expression


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 11
    '+' (43) 9
    '-' (45) 10
    '/' (47) 12
    ':' (58) 5
    '=' (61) 6 13
    error (256)
    NUMBER <num> (258) 7
    ID <str> (259) 6 8


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    program (12)
        on left: 1
        on right: 0
    statement_list (13)
        on left: 2 3
        on right: 1 3
    statement (14)
        on left: 4 5
        on right: 2 3
    assignment <num> (15)
        on left: 6
        on right: 4
    expression <num> (16)
        on left: 7 8 9 10 11 12 13
        on right: 5 6 9 10 11 12 13


State 0

    0 $accept: • program $end

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2

    program         go to state 3
    statement_list  go to state 4
    statement       go to state 5
    assignment      go to state 6
    expression      go to state 7


State 1

    7 expression: NUMBER •

    $default  reduce using rule 7 (expression)


State 2

    6 assignment: ID • '=' expression
    8 expression: ID •

    '='  shift, and go to state 8

    '='       [reduce using rule 8 (expression)]
    $default  reduce using rule 8 (expression)


State 3

    0 $accept: program • $end

    $end  shift, and go to state 9


State 4

    1 program: statement_list •
    3 statement_list: statement_list • statement

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2

    $default  reduce using rule 1 (program)

    statement   go to state 10
    assignment  go to state 6
    expression  go to state 7


State 5

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 6

    4 statement: assignment •

    $default  reduce using rule 4 (statement)


State 7

    5 statement: expression • ':'
    9 expression: expression • '+' expression
   10           | expression • '-' expression
   11           | expression • '*' expression
   12           | expression • '/' expression
   13           | expression • '=' expression

    '='  shift, and go to state 11
    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15
    ':'  shift, and go to state 16


State 8

    6 assignment: ID '=' • expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 17

    expression  go to state 18


State 9

    0 $accept: program $end •

    $default  accept


State 10

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 11

   13 expression: expression '=' • expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 17

    expression  go to state 19


State 12

    9 expression: expression '+' • expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 17

    expression  go to state 20


State 13

   10 expression: expression '-' • expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 17

    expression  go to state 21


State 14

   11 expression: expression '*' • expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 17

    expression  go to state 22


State 15

   12 expression: expression '/' • expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 17

    expression  go to state 23


State 16

    5 statement: expression ':' •

    $default  reduce using rule 5 (statement)


State 17

    8 expression: ID •

    $default  reduce using rule 8 (expression)


State 18

    6 assignment: ID '=' expression •
    9 expression: expression • '+' expression
   10           | expression • '-' expression
   11           | expression • '*' expression
   12           | expression • '/' expression
   13           | expression • '=' expression

    '='  shift, and go to state 11
    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 6 (assignment)


State 19

    9 expression: expression • '+' expression
   10           | expression • '-' expression
   11           | expression • '*' expression
   12           | expression • '/' expression
   13           | expression • '=' expression
   13           | expression '=' expression •

    '='  shift, and go to state 11
    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 13 (expression)


State 20

    9 expression: expression • '+' expression
    9           | expression '+' expression •
   10           | expression • '-' expression
   11           | expression • '*' expression
   12           | expression • '/' expression
   13           | expression • '=' expression

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 9 (expression)


State 21

    9 expression: expression • '+' expression
   10           | expression • '-' expression
   10           | expression '-' expression •
   11           | expression • '*' expression
   12           | expression • '/' expression
   13           | expression • '=' expression

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 10 (expression)


State 22

    9 expression: expression • '+' expression
   10           | expression • '-' expression
   11           | expression • '*' expression
   11           | expression '*' expression •
   12           | expression • '/' expression
   13           | expression • '=' expression

    $default  reduce using rule 11 (expression)


State 23

    9 expression: expression • '+' expression
   10           | expression • '-' expression
   11           | expression • '*' expression
   12           | expression • '/' expression
   12           | expression '/' expression •
   13           | expression • '=' expression

    $default  reduce using rule 12 (expression)
